--- a/Awesomium ScreenShot/MainWindow.xaml
+++ b/Awesomium ScreenShot/MainWindow.xaml
@@ -1,9 +1,14 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:Awesomium_ScreenShot_Class="clr-namespace:Awesomium_ScreenShot.Class" xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" mc:Ignorable="d" x:Class="Awesomium_ScreenShot.MainWindow"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+		xmlns:Awesomium_ScreenShot_Class="clr-namespace:Awesomium_ScreenShot.Class" 
+		xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" 
+		mc:Ignorable="d" 
+		x:Class="Awesomium_ScreenShot.MainWindow"
         x:Name="Main"
-        Title="Awesomium Screenshot" Height="350" Width="525" WindowStartupLocation="CenterScreen" Icon="icon.png" DataContext="{Binding Settings, ElementName=Main}">
+        Title="Awesomium Screenshot" Height="469" Width="525" WindowStartupLocation="CenterScreen" Icon="icon.png" DataContext="{Binding Settings, ElementName=Main}">
 	<Window.Resources>
 		<DataTemplate x:Key="FileItem">
 			<Grid>
@@ -17,32 +22,34 @@
 		</DataTemplate>
 	</Window.Resources>
     <Grid>
-    	<Grid.RowDefinitions>
-        			<RowDefinition/>    		
-					<RowDefinition Height="60"/>    		
-				</Grid.RowDefinitions>
-        <telerik:RadMenu x:Name="TopMenuBar" VerticalAlignment="Top">
-    		<telerik:RadMenuItem Header="_File">
-    			<telerik:RadMenuItem Header="_Open">
-    				<telerik:RadMenuItem Header="Open Files..."  Click="MenuOpen_OnClick"/>
-					<telerik:RadMenuItem Header="Open Folder" Click="MenuOpenFolder_OnClick"/>
-				</telerik:RadMenuItem>    			    			
-				<telerik:RadMenuItem IsSeparator="true"/>
-				<telerik:RadMenuItem Header="_Quit" Click="MenuClose_OnClick"/>
-    		</telerik:RadMenuItem>
-			<telerik:RadMenuItem Header="_Edit">
-				<telerik:RadMenuItem Header="_Preferences" Click="MenuPreferances_OnClick"/>				
-			</telerik:RadMenuItem>
-			<telerik:RadMenuItem Header="Resolution" ItemsSource="{Binding Settings.MenuItemsList, ElementName=Main}" />
-    	</telerik:RadMenu>
-        <Grid Grid.Row="0" Margin="8,27.96,0,0" >
-        	<TextBlock VerticalAlignment="Top"><Run Text="Files"/></TextBlock>
-        	<ListBox HorizontalContentAlignment="Stretch" x:Name="FileListBox" ItemsSource="{Binding FileNames, ElementName=Main}" Margin="8,19.96,8,8" ItemTemplate="{DynamicResource FileItem}"/>
-        </Grid>
-        <Grid Grid.Row="1">
-            <telerik:RadButton x:Name="ScreenShotButton" Content="Screen Shot!" Click="ScreenShot_OnClick" MinWidth="60" HorizontalAlignment="Left"  Margin="8" IsEnabled="{Binding CanScreenShot}"/>
-        	<telerik:RadButton Content="Reset" HorizontalAlignment="right" Margin="0,8,8,8" Click="ButtonReset_OnClick" MinWidth="60"/>
-        	
-        </Grid>
-    </Grid>
+		<telerik:RadRibbonBar ApplicationButtonVisibility="Collapsed" VerticalAlignment="Top" d:LayoutOverrides="Width" Title="" TitleBarVisibility="Collapsed" ApplicationName="" IsApplicationMenuOpen="False" >
+    		<telerik:RadRibbonTab Header="File">
+    			<telerik:RadRibbonGroup Header="Open">
+    				<telerik:RadRibbonButton x:Name="FileOpen" Click="FileOpen_Click">File</telerik:RadRibbonButton>
+    				<telerik:RadRibbonButton x:Name="FolderOpen" Click="FolderOpen_Click">Folder</telerik:RadRibbonButton>    				
+				</telerik:RadRibbonGroup>
+                <telerik:RadRibbonGroup Header="Resolution">
+                	<telerik:RadRibbonDropDownButton Text="Output" DropDownContent="{Binding Settings.MenuItemsList, ElementName=Main}"/>
+                    <telerik:RadRibbonButton Click="RadRibbonButton_Click">New</telerik:RadRibbonButton>
+
+
+
+                </telerik:RadRibbonGroup>
+				<telerik:RadRibbonGroup Header="">					
+					<telerik:RadRibbonButton IsEnabled="{Binding CanScreenShot}" Click="ScreenShotButton_Click">Screen Shot</telerik:RadRibbonButton>
+					<telerik:RadRibbonButton Click="ResetButton_Click">Reset</telerik:RadRibbonButton>
+				</telerik:RadRibbonGroup>    			 		
+			</telerik:RadRibbonTab>    	
+			<telerik:RadRibbonTab Header="Preferences">
+				<telerik:RadRibbonGroup>
+                    <telerik:RadRibbonButton Click="PreferencesWindow_Click">Preferences</telerik:RadRibbonButton>
+				</telerik:RadRibbonGroup>
+			</telerik:RadRibbonTab>
+			<TextBox Text="text" Height="312" Width="509"/>
+    	</telerik:RadRibbonBar>
+		<Grid Visibility="Collapsed" Margin="0,143,0,0" >
+			<TextBlock HorizontalAlignment="Left" TextWrapping="NoWrap" Text="Files:" VerticalAlignment="Top"/>
+			<ListBox HorizontalContentAlignment="Stretch" x:Name="FileListBox" ItemsSource="{Binding FileNames, ElementName=Main}" Margin="8,19.96,8,8" ItemTemplate="{DynamicResource FileItem}"/>
+		</Grid>
+	</Grid>
 </Window>
